# novak-sdt

./: .gitignore  LICENSE.txt  NOTICE.md  PROJECT_STATE.md  README.md  WHAT_IS_REAL_NOW.md  mkdocs.yml  pyproject.toml
docs/: CASE_STUDY.md  DIAGRAM_01_OPERATIONAL_FLOW.md  DIAGRAM_02_FILES_ADDED.md  DIAGRAM_03_FRESHMAN_EXPLANATION.md  EXAMPLE_BASELINE_BEFORE_AFTER.md  GITHUB_PAGES.md  INSTALLATION.md  PROOFS.md  PUBLIC_VS_PRIVATE.md  REPORTS.md  SDT_101.md  SDT_CREATED_DOCS_INDEX.md  SDT_HISTORY_LANE.md  SDT_INVENTORY_MODE.md  SDT_SERIOUS_MODE.md  index.md
site/: 404.html  docs.html  index.html  proofs.html  sdt-created-docs.html  styles.css
tests/: test_attempt_log.py  test_change_bundle_cli.py  test_change_bundle_scaffold.py  test_extended_floor_change_index.py  test_extended_floor_contract.py  test_extended_floor_shell_and_intent.py  test_history_intel.py  test_notify_n1_floor.py  test_project_intel.py  test_project_truth_hardening.py  test_render_notify_outbox_status.py  test_runner_wrapper.py  test_script_cli.py  test_truth_closure_smoke.py
tools/: archive_history_log.py  check_python_warnings.sh  clean_placeholder_docs.py  freeze_trusted_floor.sh  install_novak_shell_shortcuts.sh  install_truth_refresh_hooks.sh  patch_cli_truth_hooks.py  patch_project_intel_weights.py  prove_internal_candidate.sh  prove_live_timer_once.sh  prove_notify_n1.sh  prove_truth_refresh_hardening.sh  render_notify_outbox_status.py  repro_pr19_notification_lane.sh  run_truth_refresh_and_stage.sh  sdt_change_bundle.py  sdt_history_intel.py  sdt_inventory_snapshot.py  sdt_project_intel.py  (+5 more)
(+83 files in other folders)
